--- a/templates/actor/parts/actor-medicines.hbs
+++ b/templates/actor/parts/actor-medicines.hbs
@@ -9,6 +9,7 @@
             <a
               class="item-control"
               data-edit
+               draggable="true"
               data-item-id="{{ item._id }}"
               title="View Item Details"
             >
