--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -93,7 +93,7 @@
                 {{>
                     "systems/arcane-arcade-fallout/templates/actor/status/passives.hbs"
                     healingRate=system.healingRate
-                    combatSequence=system.combatSequence
+                    combatSequence=system.combatSequence.value
                     fatigue=system.penalties.fatigue
                     passiveSense=system.passiveSense
                     partyNerve=system.partyNerve
