--- a/templates/actor/heading/status.hbs
+++ b/templates/actor/heading/status.hbs
@@ -79,13 +79,13 @@
                     <input style="height:30px"  
                     type="number"
                     class="numberwithbuttons"
-                    name="system.abilityPoints.value"
+                    name="system.actionPoints.value"
                     value="{{ system.actionPoints.value }}" />
                     /
                     <input style="height:30px"  
                     type="number"
                     class="numberwithbuttons"
-                    name="system.abilityPoins.max"
+                    name="system.actionPoints.max"
                     value="{{ system.actionPoints.max }}" />
                 </tr>
                 <tr>
@@ -93,7 +93,7 @@
                     <input style="height:20px"  
                     type="number"
                     class="numberwithbuttons"
-                    name="system.stamina.modifiers"
+                    name="system.actionPoints.temp"
                     value="{{ system.actionPoints.temp }}" />
                 </tr>
             </table>  
