--- a/templates/actor/status/special.hbs
+++ b/templates/actor/status/special.hbs
@@ -5,8 +5,11 @@
       <label
         for="system.abilities.{{ key }}.value"
         class="resource-label rollable flexlarge align-left"
+        title="1d20 + {{ability.label}} Mod ( {{ability.mod}} ){{#DifferentFrom ../system.penaltyTotal 0}} -  Penalties ( {{../system.penaltyTotal}} ){{/DifferentFrom}} {{#GreaterThan ability.advantage 1}} with advantage {{/GreaterThan}}{{#LesserThan ability.advantage 0}} with disadvantage {{/LesserThan}}"
+
         data-rollable
         data-roll="d20+{{ ability.mod }}-@penaltyTotal"
+        data-advantage="{{ ability.advantage }}"
         data-label="{{ ability.label }}"
         >{{ ability.label }}</label
       >
