--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -112,7 +112,7 @@
                           id="{{ key.id }}"
                           title="View Item Details"
                         >
-                          <img title="{{key.description}}" class="perk-image" src="{{key.img}}" />
+                          <img class="perk-image" src="{{key.img}}" />
                         </a>
                       </div>
                       <div class="perk-div">
