Updated Status page

--- a/templates/actor/heading/status.hbs
+++ b/templates/actor/heading/status.hbs
@@ -142,11 +142,11 @@
         </td>
     </tr>
     <tr style="letter-spacing: -1px">
-        <td title="Armor Class (how hard it is to hit you)
+        <td title="Armor Class (Roll Needed to Hit You)
         Total = {{#DifferentFrom armorClass.armor 10}}Armor{{else}}Unarmored{{/DifferentFrom}} ({{ armorClass.armor }}){{#DifferentFrom armorClass.modifiers 0}} + Effects ({{armorClass.modifiers}}){{/DifferentFrom}}{{#DifferentFrom armorClass.base 0}} + Manual Adjustments ({{armorClass.base}}){{/DifferentFrom}}">
             {{#FormatCompendium "AC" "properties"}}{{/FormatCompendium}}
         </td>
-        <td title="Damage Threshold (points deducted from damage)
+        <td title="Damage Threshold (HP Protection After 0 Stamina)
         Total = {{#DifferentFrom damageThreshold.armor 0}}Armor{{else}}Unarmored{{/DifferentFrom}} ({{ damageThreshold.armor }}){{#DifferentFrom damageThreshold.modifiers 0}} + Effects ({{damageThreshold.modifiers}}){{/DifferentFrom}}{{#DifferentFrom damageThreshold.base 0}} + Manual Adjustments ({{damageThreshold.base}}){{/DifferentFrom}}">
             {{#FormatCompendium "DT" "properties"}}{{/FormatCompendium}}
         </td>
