persist attack dialog changes between renders

--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -83,7 +83,7 @@
       <legend>AP Cost</legend>
       <div class="flex space-between">
         <label for="consumesAp">Consume AP</label>
-        <input type="checkbox" name="consumesAp" checked="{{ consumesAp }}" />
+        <input type="checkbox" name="consumesAp" {{checked consumesAp}} />
       </div>
       <div class="flex space-between">
         <div>Weapon:</div>
