--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -1,10 +1,6 @@
 <table>
   <tr>
-    <td class="armorbox">
-      <h3>Armor</h3>
-      {{> "systems/arcane-arcade-fallout/templates/actor/items/equipped-armor.hbs"}}
-    </td>
-    <td class="armorbox">
+    <td colspan="2" class="armorbox">
       <details {{#if system.combatActionsexpanded }} open="true" {{/if}}><summary data-combatExpand style="padding:7.5px;">Combat Actions</summary>
       {{> "systems/arcane-arcade-fallout/templates/actor/items/combat-actions.hbs" }}
         </details>
