--- a/css/grid.css
+++ b/css/grid.css
@@ -3,9 +3,15 @@
   display: grid;
   grid-column: span 2 / span 2;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  gap: 10px;
-  margin: 10px 0;
-  padding: 0;
+}
+
+.grid.bordered {
+  border-top: 1px solid var(--green);
+  border-left: 1px solid var(--green);
+}
+.grid.bordered > * {
+  border-bottom: 1px solid var(--green);
+  border-right: 1px solid var(--green);
 }
 
 .grid-3col {
